--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -22,6 +22,8 @@
         <div id="container">
     	    <script src="script.js"></script>
     	    <script src="message.js"></script>
+ <script src="ErlandTest.js"></script>
+    	    
                 <h1>LabbyMessssssage</h1> 	  
                     <form id="message-box" >
                         <fieldset>
