Lab 2 Moment 9 alles och validerad

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -34,7 +34,7 @@
                         </div>         
                         <p id="msgCount">Antal meddelanden: 0</p>                                        
                         <div>            
-                            <label for="message"></label><textarea name="message" id="messageInput"></textarea>
+                            <label></label><textarea name="message" id="messageInput"></textarea>
                         </div>        
                     </fieldset>
                     <button id="sendButton" type="submit">Send</button>        
