--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -10,7 +10,8 @@
     <body>
         <div id="container">
     	    <script src="memory/script/random.js"></script>
-    	    <script src="memory/script/memory.js"></script>
-    	</div>    
+ <!--   	    <script src="memory/script/memory.js"></script> -->
+       	    <script src="memory/ETest.js"></script> 
+       	</div>    
     </body>
 </html>
