--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -24,7 +24,7 @@
                         </div>         
                         <p id="msgCount">Antal meddelanden: 0</p>                                        
                         <div>            
-                            <label></label><textarea name="message" id="messageInput"></textarea>
+                            <textarea name="message" id="messageInput"></textarea>
                         </div>        
                     </fieldset>
                     <button id="sendButton" type="submit">Send</button>        
