--- a/4-thequiz/index.html
+++ b/4-thequiz/index.html
@@ -17,8 +17,8 @@
                 <textarea class="textArea" name="answer" id="answerInput">"Skriv ditt svar här"</textarea>
             </div>    
             <input type="button" id="sendAButton" value="Skicka svar"/>
-            <div class="textArea" name="result" id="resultOutput"></div>
-            <div class="textArea2" name="total" id="totalResult"></div>
+            <div class="textArea"  id="resultOutput"></div>
+            <div class="textArea2" id="totalResult"></div>
     	    <script src="js/TheQuiz.js"></script>
        	</div>    
     </body>
