--- a/3-gameon/index.html
+++ b/3-gameon/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 	<meta charset="UTF-8" />
- 	<title>JavaScript - LabbyMezzage</title>	
+ 	<title>JavaScript - GameOn</title>	
     <link rel="stylesheet" type="text/css" href="css/style.css">       	
 
         
@@ -10,8 +10,8 @@
     <body>
         <div id="container">
     	    <script src="memory/script/random.js"></script>
-	    <script src="memory/script/memory.js"></script>
- <!--   	    <script src="memory/ETest.js"></script>  -->
-       	</div>    
+<!--	    <script src="memory/script/memory.js"></script>  -->
+  	        <script src="memory/ETest.js"></script>  
+  	    </div>    
     </body>
 </html>
