--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 	<meta charset="UTF-8" />
- 	<title>JavaScript - LabbyMezzage</title>	
+ 	<title>JavaScript - This That test</title>	
     <link rel="stylesheet" type="text/css" href="css/style.css">       	
 
         
