--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
  	<title>JavaScript - Projekt</title>	
     <link rel="stylesheet" type="text/css" href="css/style.css">       	
-
+    <link rel="stylesheet" type="text/css" href="css/memory.css">    
         
 </head>
     <body>
