done added app name to top label

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -11,7 +11,9 @@
         <div id="container">
             <div id="content">
        	    
-      	    </div>   
+      	    </div> 
+            <div id="divider">
+      	    </div>      	    
             <div id="appArea">
       	    </div>
   	    </div>
