--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -17,6 +17,7 @@
             <div id="appArea">
       	    </div>
   	    </div>
+  	    <script src="script/imageGallery/imageGallery.js"></script>
   	    <script src="script/memory/random.js"></script>
 	    <script src="script/memory/memory.js"></script> 
 	    <script src="script/projekt.js"></script> 
