--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -18,7 +18,7 @@
       	    </div>
   	    </div>
   	    <script src="script/imageGallery/imageGallery.js"></script>
-  	    <script src="script/RSS/Rss.js"></script>
+  	    <script src="script/RSS/rss.js"></script>
   	    <script src="script/memory/random.js"></script>
 	    <script src="script/memory/memory.js"></script> 
 	    <script src="script/projekt.js"></script> 
