--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -5,6 +5,8 @@
  	<title>JavaScript - Projekt</title>	
     <link rel="stylesheet" type="text/css" href="css/style.css">       	
     <link rel="stylesheet" type="text/css" href="css/memory.css">    
+    <link rel="stylesheet" type="text/css" href="css/rss.css">    
+    <link rel="stylesheet" type="text/css" href="css/imageGallery.css">    
         
 </head>
     <body>
