--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -19,16 +19,14 @@
             <div id="appArea">
       	    </div>
   	    </div>
-        
- 	    <script data-main="script/main" src="script/require/require.js"></script> 	    
 
-<!-- 	    <script src="script/projekt.js"></script> 	    
+ 	    <script src="script/projekt.js"></script> 	    
 	    <script src="script/window.js"></script>  
 	    <script src="script/imageGallery/imageGallery.js"></script>
   	    <script src="script/RSS/rss.js"></script>
   	    <script src="script/memory/random.js"></script>
 	    <script src="script/memory/memory.js"></script> 
--->
+
 
 
 	    
